[package]
name = "hortalogica"
description = "Automated indoor plant care"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3.8", optional = true }
embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
embassy-net = { version = "0.4.0", features = ["tcp", "dhcpv4"] }
embassy-net-driver = { version = "0.2.0" }
embassy-sync = { version = "0.6.0" }
embassy-futures = { version = "0.1.1" }
embedded-io-async = { version = "0.6.1" }
esp-backtrace = { version = "0.12.0", features = [
    "exception-handler",
    "panic-handler",
] }
esp-hal = { version = "0.18.0", features = ["async"] }
esp-hal-embassy = { version = "0.1.0", features = ["time-timg0"] }
esp-println = "0.9.1"
esp-wifi = { version = "0.6.0", default-features = false, features = ["wifi"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
no-std-net = "0.6.0"

[features]
default = ["defmt", "esp32s3"]
esp32s3 = [
    # All dependencies with an esp32s3 feature.
    "esp-hal/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
    "esp-wifi/esp32s3",
    "esp-hal-embassy/esp32s3",
]
defmt = [
    # All dependencies with a defmt feature.
    "dep:defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "esp-backtrace/defmt",
    "esp-hal/defmt",
    "esp-println/defmt-espflash",
    # "esp-wifi/defmt",             # for some reason this causes error E0277. It may require defmt@0.3.6 too.
    "embassy-net/defmt",
]
